--- a/views/cards.html
+++ b/views/cards.html
@@ -68,7 +68,9 @@
       </div>
     </section>
     <div class="add-super">
-      <img src="../img/+.png" alt="">
+      <a href="/views/super.html">
+        <img src="../img/+.png" alt="">
+      </a>
     </div>
   </main>
 
